--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
@@ -15,6 +15,7 @@
             <div class="content">
                 <div id="withdrawal">
                     <form [formGroup]="form" (ngSubmit)="onSubmit()" *ngIf="cadastroCompleto && !respostaSolicitacao">
+                        <app-spinner *ngIf="submitting"></app-spinner>
                         <div id="withdrawal-container">
                             <section id="payment-method-column" class="hide-mobile">
                                 <h3>{{'financeiro.paymentGateway' | translate}}</h3>
@@ -39,6 +40,20 @@
                                     <div class="details-container">
                                         <div class="details-available-amount">
                                             {{'saques.availableBalanceForWithdrawal' | translate}}: <span class="available-amount">{{saldo | currency}}</span>
+                                        </div>
+                                        <div
+                                            *ngIf="paymentMethodSelected == 'sauto_pay' && !metodoPagamentoDesabilitado"
+                                            id="sautopay-alert"
+                                            class="alert alert-info"
+                                        >
+                                            <div class="sautopay-alert-text">
+                                                <b>{{'geral.atencao' | translate}}! </b>{{'saques.infoSautoPay' | translate}}
+                                            </div>
+                                            <div class="sautopay-alert-btn-close">
+                                                <a type="button" aria-label="Close" class="btn-close" (click)="closeAlert('sautopay-alert')">
+                                                    <i class="fa fa-times"></i>
+                                                </a>
+                                            </div>
                                         </div>
                                         <div class="details-safe-withdrawal-alert">
                                             {{'saques.safeWithdrawalAlert' | translate}}
@@ -164,98 +179,12 @@
                         </div>
                     </form>
                 </div>
-                <!-- <div class="alert alert-secondary" role="alert">
-                    <strong>{{'geral.atencao' | translate}}!</strong> <br>
-                    {{'financeiro.valorMinimoSaque' | translate}}: <strong>{{valorMinSaque | currency}}</strong><br>
-                    {{'financeiro.valorMaximoSaqueDiario' | translate}}: <strong>{{valorMaxSaqueDiario | currency}}</strong><br>
-                    {{'financeiro.valorMaximoSaqueMensal' | translate}}: <strong> {{valorMaxSaqueMensal | currency}}</strong><br>
-                    {{ 'geral.alertaSaque' | translate }}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-                <div class="alert alert-secondary" *ngIf="!permitirQualquerChavePix">
-                    {{ 'geral.alertaChavePixCpf' | translate }}
-                </div>
-                <div *ngIf="cadastroCompleto && !respostaSolicitacao">
-                    <form [formGroup]="form" (ngSubmit)="onSubmit()">
-                        <app-spinner *ngIf="submitting"></app-spinner>
-                        <div class="row">
-                            <div class="col col-sm-3 col-lg-4 col-xl-3 saque-pix">
-                                <div class="form-group required">
-                                    <div class="mt-3">
-                                        <label class="label text-left">{{'geral.chavePix' | translate}}</label>
-                                    </div>
-                                    <div class="mt-3">
-                                        <div class="form-group">
-                                            <select class="form-control inverted-out" formControlName="tipoChavePix" (change)="onChavePixChange()">
-                                                <ng-container *ngIf="!permitirQualquerChavePix; else optionsPix">
-                                                    <option value="cpf" selected>{{'geral.cpf' | translate}}</option>
-                                                </ng-container>
-                                                <ng-template #optionsPix>
-                                                    <option value="0" [selected]="true" disabled>{{'geral.selecioneChavePix' | translate}}</option>
-                                                    <option value="cpf">{{'geral.cpf' | translate}}</option>
-                                                    <option value="email">{{'geral.email' | translate}}</option>
-                                                    <option value="phone">{{'geral.telefone' | translate}}</option>
-                                                    <option value="random">{{'geral.chaveAleatoria' | translate}}</option>
-                                                </ng-template>
-                                            </select>
-                                            <app-error-msg [control]="form.get('tipoChavePix')"></app-error-msg>
-                                        </div>
-                                    </div>
-                                    <div class="mt-3" *ngIf="form.get('tipoChavePix').value !== '0' && labelChavePix !== ''">
-                                        <div class="form-group">
-                                            <label for="clienteChavePix" id="labelChavePix" class="text-left">{{ labelChavePix }}</label>
-                                            <input type="text" id="clienteChavePix" class="form-control inverted-out"
-                                                    formControlName="clienteChavePix"
-                                                    [mask]="getMask()"
-                                                    [readonly]="form.get('tipoChavePix').value == 'cpf'">
-                                            <app-error-msg [control]="form.get('clienteChavePix')"></app-error-msg>
-                                        </div>
-                                    </div>
-                                    <div [ngClass]="{'text-center': isMobile}">
-                                        <span class="alerta-saldo mt-3">
-                                            {{'saques.saldoDisponivelParaSaque' | translate}}: {{ saldo | currency }}</span>
-                                        <label class="label"
-                                               [ngClass]="{'label-input-valor': isMobile}">
-                                            <span *ngIf="isMobile">{{'saques.informeOValor' | translate}}</span>
-                                            <span *ngIf="!isMobile">{{'saques.informeValorDesejadoSaque' | translate}}</span>
-                                        </label>
-                                        <input currencyMask
-                                               [ngClass]="{'form-control inverted-out text-left mt-3': !isMobile, 'input-valor': isMobile}"
-                                               [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }"
-                                               formControlName="valor">
-                                        <app-error-msg [control]="form.get('valor')"></app-error-msg>
-                                        <span
-                                            class="hide-mobile mt-3 d-block">
-                                            {{'saques.saldoDisponivelParaSaque' | translate}}: {{ saldo | currency }}</span>
-                                    </div>
-                                </div>
-                                <div *ngIf="apiPagamentos == 'sauto_pay' && !metodoPagamentoDesabilitado"
-                                     class="alert alert-info alert-dismissible fade show">
-                                    <b>{{'geral.atencao' | translate}}! </b>{{'saques.infoSautoPay' | translate}}. <br>
-                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col col-sm-3 saque-pix">
-                                <div class="form-group group-buttons">
-                                    <button type="submit" class="btn btn-custom solicitar-saque" [ngClass]="{'btn-block': isMobile}"
-                                            [disabled]="submitting"  [disabled]="disableButton">
-                                        {{'geral.sacar' | translate}}
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                </div>
                 <div class="alert alert-danger" *ngIf="!cadastroCompleto">
                     {{errorMessage}} <a class="btn-link pointer" (click)="completarCadatro()">{{'geral.cliqueAquiParaContinuar' | translate}}.</a>
                 </div>
                 <div class="alert alert-info" *ngIf="respostaSolicitacao">
                     {{respostaSolicitacao}}
-                </div> -->
+                </div>
             </div>
         </div>
     </ng-container>
