--- a/src/app/clientes/transacoes-historico/transacoes-historico.component.css
+++ b/src/app/clientes/transacoes-historico/transacoes-historico.component.css
@@ -23,6 +23,63 @@
     border-bottom: 2px solid var(--highlight);
 }
 
+.filtros {
+    display: flex;
+    align-items: center;
+}
+
+.filtros input, .filtros select {
+    margin-right: 20px;
+}
+
+.filtros > input, .filtros .datepicker-group {
+    max-width: 300px;
+}
+
+.filtros select {
+    max-width: 150px;
+}
+
+.datepicker-group i {
+    position: absolute;
+    z-index: 100;
+    top: 12px;
+    right: 32px;
+    font-size: 14px;
+}
+
+.datepicker-group input {
+    padding-right: 35px;
+    border-radius: 5px;
+}
+
+.dp-hidden {
+    width: 0 !important;
+    margin: 0 !important;
+    border: none !important;
+    padding: 0 !important;
+}
+
+.custom-day {
+    text-align: center;
+    padding: 0.185rem 0.25rem;
+    display: inline-block;
+    height: 2rem;
+    width: 2rem;
+}
+
+.custom-day.focused {
+    background-color: var(--highlight);
+}
+
+.custom-day.range, .custom-day:hover {
+    background-color: var(--highlight);
+    color: var(--foreground-highlight);
+}
+.custom-day.faded {
+    background-color: var(--highlight);
+}
+
 .btnClose {
     font-size: 32px;
     line-height: 32px;
@@ -31,6 +88,10 @@
     right: 10px;
     color: var(--highlight);
     cursor: pointer;
+}
+
+.table-responsive .label {
+    margin: 32px 0 16px 0;
 }
 
 .table {
