--- a/src/app/clientes/transacoes-historico/transacoes-historico.component.html
+++ b/src/app/clientes/transacoes-historico/transacoes-historico.component.html
@@ -5,7 +5,7 @@
 
     <div class="internal-container-out">
         <div class="content-header">
-            <h2>{{'geral.history' | translate}} </h2>
+            <h2>{{'geral.transactionHistory' | translate}} </h2>
         </div>
 
         <div class="tabs">
@@ -16,13 +16,60 @@
             </ng-container>
         </div>
 
+        <form (ngSubmit)="onSubmit()" [formGroup]="form">
+            <div class="filtros">
+                <input
+                    name="datepicker"
+                    class="dp-hidden"
+                    ngbDatepicker
+                    #datepicker="ngbDatepicker"
+                    [autoClose]="'outside'"
+                    (dateSelect)="onDateSelection($event, datepicker)"
+                    [displayMonths]="2"
+                    [dayTemplate]="t"
+                    outsideDays="hidden"
+                    [startDate]="fromDate!"
+                    tabindex="-1"
+                    value=""
+                >
+                <ng-template #t let-date let-focused="focused">
+                    <span class="custom-day"
+                        [class.focused]="focused"
+                        [class.range]="isRange(date)"
+                        [class.faded]="isHovered(date) || isInside(date)"
+                        (mouseenter)="hoveredDate = date"
+                        (mouseleave)="hoveredDate = null">
+                        {{ date.day }}
+                    </span>
+                </ng-template>
+                <div class="input-group datepicker-group">
+                    <i class="fa fa-calendar"></i>
+                    <input
+                        type="text"
+                        class="form-control inverted-out"
+                        [(ngModel)]="selectedDate"
+                        (click)="datepicker.toggle()"
+                        [ngModelOptions]="{standalone: true}"
+                        style="border-radius: 5px"
+                    >
+                </div>
+                <select class="form-control inverted-out" formControlName="status">
+                    <option value="">{{'geral.todos' | translate}}</option>
+                    <option [value]="option[0]" *ngFor="let option of statusFilterOptions">{{option[1] | translate}}</option>
+                </select>
+                <button class="btn btn-custom" type="submit">{{'geral.filtrar' | translate}}</button>
+            </div>
+        </form>
+
         <app-spinner *ngIf="showLoading"></app-spinner>
         <ng-container *ngIf="!showLoading">
             <div class="content-body" [ngSwitch]="tabSelected">
 
-                <div class="table-responsive" *ngSwitchCase="'withdraws'">
+                <div class="table-responsive" *ngSwitchCase="'withdrawals'">
                     <label class="label">
-                        <span>{{'saques.solicitacoesRecentes' | translate}}</span>
+                        <span *ngIf="qttWithdrawalsFound < 1">{{'geral.resultWereNotFound' | translate }}</span>
+                        <span *ngIf="qttWithdrawalsFound == 1">{{'geral.resultWereFound' | translate }}</span>
+                        <span *ngIf="qttWithdrawalsFound > 1">{{'geral.resultsWereFound' | translate: {'quantity': qttWithdrawalsFound} }}</span>
                     </label>
                     <table class="table">
                         <thead>
@@ -31,21 +78,21 @@
                                 <th>{{'geral.detalhes' | translate}}</th>
                                 <th>{{ 'geral.chavePix' | translate }}</th>
                                 <th>{{'geral.status' | translate}}</th>
-                                <th>{{'geral.valor' | translate}}</th>
+                                <th >{{'geral.valor' | translate}}</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let withdraw of withdraws">
+                            <tr *ngFor="let withdrawal of withdrawals">
                                 <td><img src="/assets/images/debito.svg" alt="image"></td>
-                                <td>{{'saques.saqueERegistrado' | translate}} {{ withdraw.data }}</td>
-                                <td>{{ formatarChavePix(withdraw.chavePix, withdraw.tipoChavePix) }}</td>
+                                <td>{{'saques.saqueERegistrado' | translate}} {{ withdrawal.data }}</td>
+                                <td>{{ formatarChavePix(withdrawal.chavePix, withdrawal.tipoChavePix) }}</td>
                                 <td>
-                                {{ withdraw.status }}
-                                <a class="info" *ngIf="withdraw.observacao" placement="top" [ngbPopover]="withdraw.observacao">
+                                {{ withdrawal.status }}
+                                <a class="info" *ngIf="withdrawal.observacao" placement="top" [ngbPopover]="withdrawal.observacao">
                                     <i class="fa fa-info"></i>
                                 </a>
                                 </td>
-                                <td>{{ withdraw.valor | currency}}</td>
+                                <td>{{ withdrawal.valor | currency}}</td>
                             </tr>
                         </tbody>
                     </table>
@@ -53,7 +100,9 @@
 
                 <div class="table-responsive" *ngSwitchCase="'deposits'">
                     <label class="label">
-                        <span>{{'deposito.depositosRecentes' | translate}}</span>
+                        <span *ngIf="qttDepositsFound < 1">{{'geral.resultWereNotFound' | translate }}</span>
+                        <span *ngIf="qttDepositsFound == 1">{{'geral.resultWereFound' | translate }}</span>
+                        <span *ngIf="qttDepositsFound > 1">{{'geral.resultsWereFound' | translate: {'quantity': qttDepositsFound} }}</span>
                     </label>
                     <table class="table">
                         <thead>
@@ -74,7 +123,6 @@
                         </tbody>
                     </table>
                 </div>
-
             </div>
         </ng-container>
     </div>
