--- a/src/app/clientes/deposito/pix/deposito-pix.component.html
+++ b/src/app/clientes/deposito/pix/deposito-pix.component.html
@@ -32,7 +32,7 @@
                         <div class="details-text">
                             {{
                             permitirBonusPrimeiroDeposito ?
-                            ('deposito.depositText' | translate:{'paymentMethod': (paymentMethod | formatPaymentMethod)}) :
+                            ('deposito.depositText' | translate:{'paymentMethod': (paymentMethod | formatPaymentMethod), 'bonusType': (bonusType | translate)}) :
                             ('deposito.depositTextWithoutBonus' | translate:{'paymentMethod': (paymentMethod | formatPaymentMethod)})
                             }}
                         </div>
@@ -87,7 +87,7 @@
                             </h3>
                             <div id="bonus-wrapper">
                                 <div class="bonus-text">
-                                    {{'financeiro.desejaReceberBonusPrimeiroDeposito' | translate}}
+                                    {{'financeiro.desejaReceberBonusPrimeiroDeposito' | translate:{'bonusType': (bonusType | translate)} }}
                                     &nbsp;<a class="btn-regras-bonus" (click)="abrirRegrasBonus()">{{'rollover.bonusRules' | translate}}</a>
                                 </div>
                                 <div class="options-container bonus-options" [ngStyle]="{'width': onlyOneModality ? '67%' : '100%'}">
