--- a/src/app/home/widgets/cassino/cassino.component.css
+++ b/src/app/home/widgets/cassino/cassino.component.css
@@ -163,7 +163,8 @@
     font-size: 50px;
 }
 
-.game-tile:hover .info-game label, .game-tile:hover .info-game p {
+.game-tile:hover .info-game label,
+.game-tile:hover .info-game p {
     opacity: 0.3;
 }
 
@@ -173,7 +174,7 @@
     width: 100%;
     bottom: 0;
     color: #fff;
-    background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,1));
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
     transition: .300s;
 }
 
@@ -382,7 +383,6 @@
     .game-tile {
         --gameTileWidth: calc((100% / 5) - 16px);
         width: var(--gameTileWidth);
-        min-height: 169px;
         margin-left: 20px;
         margin-bottom: 20px;
     }
@@ -396,7 +396,7 @@
     }
 
     .game-tile-inline {
-        min-width: 130px;
+        min-width: 270px;
         margin-bottom: 0;
         margin-left: 20px !important;
     }
