--- a/src/app/casino/wall/wall.component.css
+++ b/src/app/casino/wall/wall.component.css
@@ -14,18 +14,12 @@
 
 .bloco {
     position: relative;
-    padding: 5px 120px;
+    padding: 5px 20px;
     max-width: 1910px;
     margin: 0 auto;
     flex: 1;
     width: 100%;
 }
-
-.bloco .bloco-header {
-    display: flex;
-    font-size: 16px;
-}
-
 .bloco .titulo {
     text-align: left;
     font-size: 18px;
@@ -33,17 +27,8 @@
     flex-grow: 1;
 }
 
-.ver-todos a {
-    display: flex;
-    align-items: center;
-    font-size: 16px;
-    color: var(--highlight);
-    text-decoration: none;
-    width: 100%;
-    height: 100%;
-}
-
-.games-container {
+.games-container,
+.provider-container {
     position: relative;
 }
 
@@ -64,50 +49,22 @@
     scroll-behavior: smooth;
 }
 
-.scroll-button {
-    position: absolute;
-    width: 40px;
-    height: 50px;
-    background-color: #0A0A0A;
-    color: #FFFFFF;
+.provider-list {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 22px;
-    border-radius: 5px;
-    cursor: pointer;
-    margin: 0;
-    padding: 0;
-    z-index: 2;
+    gap: 15px;
+    flex-wrap: wrap;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
-.scroll-left {
-    top: calc(50% - 25px);
-    left: -50px;
+.provider-list::-webkit-scrollbar {
+    display: none;
 }
 
-.scroll-right {
-    top: calc(50% - 25px);
-    right: -50px;
-}
-
-.enabled-scroll-button {
-    background-color: var(--inputs-odds);
-    color: var(--foreground-inputs-odds);
-    cursor: pointer;
-    transition: 500ms;
-}
-
-.enabled-scroll-button:hover {
-    background-color: var(--highlight);
-    color: var(--foreground-highlight);
-}
-
-.disabled-scroll-button {
-    background-color: var(--background);
-    color: var(--background);
-    cursor: auto;
-    transition: 500ms;
+.provider-list-inline {
+    flex-wrap: nowrap;
+    overflow: scroll;
+    scroll-behavior: smooth;
 }
 
 .more-games-fade {
@@ -246,68 +203,15 @@
     }
 }
 
-.filter {
+.filters {
     display: flex;
-    padding-top: 30px;
-    padding-right: 120px;
-    justify-content: flex-end;
-    margin: 0 auto;
-    max-width: 1910px;
+    flex-direction: column;
+    gap: 20px;
     width: 100%;
-}
-
-.filter .tabs {
-    background: var(--game);
-    border-radius: 5px;
-    margin-left: 10px;
-    padding: 0 10px;
-
-    display: flex;
-    align-items: center;
-}
-
-.filter .tabs .tab {
-    color: var(--foreground-game);
-    display: block;
-    padding: 10px 10px;
-    text-decoration: none;
-    white-space: nowrap;
-    cursor: pointer;
-
-    border-bottom: 3px solid transparent;
-}
-
-.filter .tabs .tab.active {
-    border-color: var(--highlight);
-    font-weight: 600;
-}
-
-.search-box {
-    position: relative;
-    width: 300px;
-}
-
-.search-box input {
-    padding-left: 30px;
 }
 
 .box-web{
     margin-left: 10px;
-}
-
-.search-box i.fa-search {
-    cursor: pointer;
-    position: absolute;
-    top: 13px;
-    left: 10px;
-    color: var(--foreground-inputs-odds);
-}
-
-.search-box i.fa-close {
-    cursor: pointer;
-    position: absolute;
-    top: 13px;
-    right: 10px;
 }
 
 .logo-game{
@@ -321,6 +225,7 @@
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 }
+
 .logo-game-background{
     position: absolute;
     width: 35px;
@@ -349,11 +254,18 @@
         scroll-behavior: smooth;
     }
 
+    .provider-list {
+        flex-wrap: nowrap;
+        overflow: scroll;
+        scroll-behavior: smooth;
+    }
+
     .internal .game-list {
         flex-wrap: wrap;
         gap: 10px;
         justify-content: center;
     }
+    
 
     .internal .game-tile {
         max-width: calc(50% - 5px);
@@ -368,10 +280,6 @@
         min-height: 145px;
         margin-top: 10px;
         margin-right: 10px;
-    }
-
-    .ver-todos a {
-        font-size: 12px;
     }
 
     .game-tile a {
@@ -390,51 +298,13 @@
         width: 100%;
     }
 
-    .scroll-left {
-        top: calc(50% - 15px);
-        left: 0px;
-    }
-
-    .scroll-right {
-        top: calc(50% - 15px);
-        right: 0px;
-    }
-
-    .enabled-scroll-button {
-        background-color: var(--background);
-        color: var(--foreground-inputs-odds);
-        cursor: pointer;
-        transition: 500ms;
-        z-index: 1;
-        border-radius: 25px;
-        height: 40px;
-        margin-right: 1%;
-    }
-    .enabled-scroll-button:hover {
-        background-color: var(--highlight);
-    }
-
     .disabled-scroll-button {
         background-color: var(--highlight);
         color: var(--background);
         cursor: auto;
         transition: 500ms;
     }
-    .scroll-left {
-        border-radius: 25px;
-        height: 40px;
-        margin-left: 1%;
-    }
-
-    .scroll-right{
-        border-radius: 25px;
-        height: 40px;
-        margin-right: 1%;
-    }
-    .scroll-button {
-        display: none !important;
-    }
-
+   
     .more-games-fade-right {
         background-image: linear-gradient(to left, rgba(var(--background-rgb), 1) 10%, rgba(var(--background-rgb), 0.01));
     }
@@ -461,19 +331,6 @@
         margin-left:  18px;
     }
 
-    .search-box{
-        width: 100%;
-    }
-
-    .search-box i.fa-search {
-        top: 14px;
-        font-size: medium;
-    }
-
-    .search-box i.fa-close {
-        top: 14px;
-        font-size: medium;
-    }
 
     .fornecedores-menu{
         margin: 20px;
@@ -564,14 +421,6 @@
 
     .game-tile-inline:first-of-type {
         margin-left: 0 !important;
-    }
-
-    #destaques-right{
-        display: none;
-    }
-
-    #destaques-left{
-        display: none;
     }
 
     .content-modal-fornecedores{
