bacground das modalidades

--- a/src/app/home/widgets/cards-modalidade/cards-modalidade.component.html
+++ b/src/app/home/widgets/cards-modalidade/cards-modalidade.component.html
@@ -1,21 +1,29 @@
 <div class="list-modalidades">
     <ul>
-        <li>
-            Esporte
+        <li class="bg-esportes">
+            <a routerLink="/esportes">Esporte</a>
         </li>
-        <li>
-            Esporte
-            <span>Ao Vivo</span>
+        <li class="bg-esportes-aovivo">
+            <a routerLink="/esportes/live">
+                Esporte
+                <span>Ao Vivo</span>
+            </a>
         </li>
-        <li>
-            Cassino
+        <li class="bg-cassino">
+            <a routerLink="/cassino/c/wall/todos">
+                Cassino
+            </a>
         </li>
-        <li>
-            Cassino
-            <span>Ao Vivo</span>
+        <li class="bg-cassino-aovivo">
+            <a routerLink="/cassino/cl/wall-live/todos">
+                Cassino
+                <span>Ao Vivo</span>
+            </a>
         </li>
-        <li>
-            E-Sports
+        <li class="bg-esportes-sports">
+            <a routerLink="/esportes/esports">
+                E-Sports
+            </a>
         </li>
     </ul>
 </div>
