oculta cassino sem jogos

--- a/src/app/home/widgets/cards-modalidade/cards-modalidade.component.css
+++ b/src/app/home/widgets/cards-modalidade/cards-modalidade.component.css
@@ -76,10 +76,7 @@
     line-height: 24px;
 
     height: 94px;
-}
-
-.list-modalidades ul li a {
-    color: #fff;
+    color: var(--foregroud-header);
 }
 
 .list-modalidades ul li a span {
