--- a/src/app/home/widgets/cassino/cassino.component.html
+++ b/src/app/home/widgets/cassino/cassino.component.html
@@ -1,4 +1,4 @@
-<div class="bloco">
+<div class="bloco" *ngIf="games.length > 0">
     <div class="bloco-header">
         <div class="titulo">
             {{ title ? title : ('geral.cassino' | translate) }}
